--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #none => This value effectively turns off the DDL generation.
 
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
