Added implementation of adding and serving post images
Now to add impls for adding and serving images of users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+
+#Config for file upload
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+
+
+project.image.posts = src/main/resources/static/images/posts
+project.image.users = src/main/resources/static/images/users
+
+
