Added Spring Security and Basic Type Authentication to Project
Now to implement Role based Basic Auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,12 @@ spring.servlet.multipart.max-request-size = 10MB
 project.image.posts = src/main/resources/static/images/posts
 project.image.users = src/main/resources/static/images/users
 
+logging.level.org.springframework.security = DEBUG
+
+#instead of providing user sprig secuirty will now use this user
+spring.security.user.name = akashjaiswal929@gmail.com
+spring.security.user.password = Akashjais@929
+spring.security.user.roles = ADMIN
+
+
 
