--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,9 @@ project.image.users = src/main/resources/static/images/users
 logging.level.org.springframework.security = DEBUG
 
 #instead of providing user sprig secuirty will now use this user
-spring.security.user.name = akashjaiswal929@gmail.com
-spring.security.user.password = Akashjais@929
-spring.security.user.roles = ADMIN
+#spring.security.user.name = akashjaiswal929@gmail.com
+#spring.security.user.password = Akashjais@929
+#spring.security.user.roles = ADMIN
 
 
 
