--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+
 		<!-- Dependency for Spring security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
