--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 # all specific configurations about app is done here
 
-server.port = 8080
+server.port = 5000
 
 #database configuration
 
-spring.datasource.url = jdbc:mysql://localhost:3306/blog_app_apis
-spring.datasource.username = root
-spring.datasource.password =Akashjais@929
+
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
@@ -17,7 +15,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #none => This value effectively turns off the DDL generation.
 
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+
 
 #Config for file upload
 spring.servlet.multipart.max-file-size = 10MB
@@ -33,6 +31,8 @@ logging.level.org.springframework.security = DEBUG
 #spring.security.user.name = akashjaiswal929@gmail.com
 #spring.security.user.password = Akashjais@929
 #spring.security.user.roles = ADMIN
+
+spring.profiles.active= prod
 
 
 
