Added some changes for Frontend Integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # all specific configurations about app is done here
 
-server.port = 5000
+server.port = 8080
 
 #database configuration
 
@@ -32,7 +32,7 @@ logging.level.org.springframework.security = DEBUG
 #spring.security.user.password = Akashjais@929
 #spring.security.user.roles = ADMIN
 
-spring.profiles.active= prod
+spring.profiles.active= dev
 
 
 
